--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,8 @@
   --header-border-color: #ececec;
   --border-color: #eeeeee;
   --fill-icon: #afb1b8;
+  --transition-duration: 250ms;
+  --transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /*body*/
@@ -69,22 +71,27 @@ nav {
   line-height: 1.1923;
   letter-spacing: 0.03em;
   color: #000000;
+  transition-property: color;
+  transition-duration: var(--transition-duration);
+  transition-timing-function: var(--transition-timing-function);
 }
 .header-nav-logo:hover,
 .header-nav-logo:focus {
   color: var(--highlight-сolor);
 }
+
 .logo {
   color: var(--highlight-сolor);
+
 }
 .header-nav-list {
   display: flex;
   margin-right: 318px;
   gap: 50px;
-
   list-style: none;
 }
 .header-nav-link {
+  position: relative;
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -94,11 +101,33 @@ nav {
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
   text-decoration: none;
+  transition-property: color;
+  transition-duration: var(--transition-duration);
+  transition-timing-function: var(--transition-timing-function);
 }
+
+.is-active::after {
+  content: "";
+  position: absolute;
+  bottom: -1px;
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--highlight-сolor) ;
+  border-radius: 2px;
+}
+
+.is-active {
+  color: var(--highlight-сolor);
+}
+
 .header-nav-link:hover,
 .header-nav-link:focus {
   color: var(--highlight-сolor);
 }
+
+
+
 
 /*contacts*/
 .header-contacts {
@@ -121,6 +150,10 @@ nav {
   line-height: 1.1428;
   letter-spacing: 0.02em;
   color: var(--text-color);
+
+  transition-property: color;
+  transition-duration: var(--transition-duration);
+  transition-timing-function: var(--transition-timing-function);
 }
 .header-contact-link:hover,
 .header-contact-link:focus {
@@ -129,6 +162,10 @@ nav {
 .contact-icon {
   margin-right: 10px;
   fill: currentColor;
+  transition-property: fill;
+  transition-duration: var(--transition-duration);
+  transition-timing-function: var(--transition-timing-function);
+
 }
 
 .header-contact-link:hover .contact-icon,
@@ -380,12 +417,20 @@ img {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  transition: var(--background-color);
+  fill: var(--background-color);
+
+  transition-property: background-color;
+  transition-duration: var(--transition-duration);
+  transition-timing-function: var(--transition-timing-function);
 }
 .team-icon {
   width: 20px;
   height: 20px;
   fill: var(--fill-icon);
+
+  transition-property: fill;
+  transition-duration: var(--transition-duration);
+  transition-timing-function: var(--transition-timing-function);
 }
 .team-social-link:hover,
 .team-social-link:focus {
@@ -424,11 +469,21 @@ img {
   border: 1px solid var(--fill-icon);
   border-radius: 4px;
   color: var(--fill-icon);
+  transition: color 25;
+  
+  transition-property: color;
+  transition-duration: var(--transition-duration);
+  transition-timing-function: var(--transition-timing-function);
+
 }
 .client-icon {
   width: 106px;
   height: 60px;
   fill: currentColor;
+
+ transition-property: fill;
+ transition-duration: var(--transition-duration);
+ transition-timing-function: var(--transition-timing-function);
 }
 
 .client-link:hover,
@@ -474,6 +529,10 @@ img {
   letter-spacing: 0.03em;
   color: var(--background-color);
   text-decoration: none;
+
+  transition-property: color;
+  transition-duration: var(--transition-duration);
+   transition-timing-function: var(--transition-timing-function);
 }
 .footer-logo:hover,
 .footer-logo:focus {
@@ -495,6 +554,10 @@ img {
   letter-spacing: 0.03em;
   text-decoration: none;
   color: var(--background-color);
+
+  transition-property: color;
+  transition-duration: var(--transition-duration);
+  transition-timing-function: var(--transition-timing-function);
 }
 .text {
   color: rgba(255, 255, 255, 0.6);
@@ -534,6 +597,10 @@ img {
   border-radius: 50%;
   color: var(--background-color);
   background: rgba(255, 255, 255, 0.1);
+
+  transition-property: color;
+  transition-duration: var(--transition-duration);
+  transition-timing-function: var(--transition-timing-function);
 }
 .footer-icon {
   width: 20px;
@@ -573,16 +640,20 @@ img {
   line-height: 26px;
   text-align: center;
   letter-spacing: 0.03em;
-  background: var(--button-color);
+  background-color: var(--button-color);
   border-radius: 4px;
   border: none;
   cursor: pointer;
+
+  transition-property: background-color color box-shadow;
+  transition-duration: var(--transition-duration);
+  transition-timing-function: var(--transition-timing-function);
 }
 
 .portfolio-button:hover,
 .portfolio-button:focus {
   color: var(--background-color);
-  background: var(--highlight-сolor);
+  background-color: var(--highlight-сolor);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
@@ -603,6 +674,10 @@ img {
   flex-direction: column;
   height: 100%;
   text-decoration: none;
+
+  transition-property:  box-shadow;
+  transition-duration: var(--transition-duration);
+  transition-timing-function: var(--transition-timing-function);
 }
 
 .project-link:hover,
