--- a/css/styles.css
+++ b/css/styles.css
@@ -112,7 +112,7 @@ nav {
   display: block;
   width: 100%;
   height: 4px;
-  background-color: var(--highlight-сolor) ;
+  background-color: var(--highlight-сolor);
   border-radius: 2px;
 }
 
@@ -261,7 +261,8 @@ nav {
 }
 .hero-btn-close {
   position: absolute;
-  top: 7px;
+  display: flex;
+  top: 8px;
   right: 8px;
   width: 30px;
   height: 30px;
@@ -269,9 +270,15 @@ nav {
   background: var(--background-color);
   border: 1px solid rgba(0, 0, 0, 0.1);
   cursor: pointer;
+  justify-content: center;
+  align-items: center;
 }
 .modal-close-icon {
   fill: currentColor;
+  transition: fill var(--transition-duration) var(--transition-timing-function);
+}
+.modal-close-icon:hover {
+  fill: var(--highlight-сolor);
 }
 
 .is-hidden {
