--- a/css/styles.css
+++ b/css/styles.css
@@ -20,9 +20,7 @@ h3,
 h4,
 h5,
 h6,
-p {
-  margin: 0px;
-}
+p { margin: 0px;}
 
 ul {
   margin: 0px;
@@ -34,12 +32,8 @@ body {
   background-color: var(--background-color);
 }
 
-header {
-  display: block;
-}
-nav {
-  display: block;
-}
+header { display: block;}
+nav { display: block;}
 
 /*header navigation*/
 
@@ -55,9 +49,7 @@ nav {
   display: flex;
   align-items: center;
 }
-.header-nav {
-  display: flex;
-}
+.header-nav { display: flex;}
 
 .header-nav-logo {
   display: block;
@@ -80,9 +72,8 @@ nav {
   color: var(--highlight-сolor);
 }
 
-.logo {
-  color: var(--highlight-сolor);
-}
+.logo { color: var(--highlight-сolor);}
+
 .header-nav-list {
   display: flex;
   margin-right: 318px;
@@ -116,9 +107,7 @@ nav {
   border-radius: 2px;
 }
 
-.is-active {
-  color: var(--highlight-сolor);
-}
+.is-active { color: var(--highlight-сolor);}
 
 .header-nav-link:hover,
 .header-nav-link:focus {
@@ -222,9 +211,6 @@ nav {
   border: none;
   border-radius: 4px;
 
-  color: var(--background-color);
-  background: var(--highlight-сolor);
-
   font-family: 'Roboto';
   font-weight: 700;
   font-size: 16px;
@@ -232,6 +218,9 @@ nav {
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
+
+  color: var(--background-color);
+  background: var(--highlight-сolor);
 
   cursor: pointer;
 }
@@ -243,6 +232,7 @@ nav {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
+  transition: opacity var(--transition-duration) var(--transition-timing-function);
 }
 .modal {
   position: absolute;
@@ -256,8 +246,10 @@ nav {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  transition: transform var(--transition-duration)
-    var(--transition-timing-function);
+  transition: translate var(--transition-duration)
+  var(--transition-timing-function), 
+  visibility var(--transition-duration) var(--transition-timing-function);
+    
 }
 .hero-btn-close {
   position: absolute;
@@ -272,6 +264,7 @@ nav {
   cursor: pointer;
   justify-content: center;
   align-items: center;
+
 }
 .modal-close-icon {
   fill: currentColor;
@@ -387,6 +380,7 @@ img {
   align-items: center;
   color: var(--background-color);
   font-weight: 700;
+  font-size: 14px;
   line-height: 1.14;
   text-align: center;
   letter-spacing: 0.03em;
