--- a/css/styles.css
+++ b/css/styles.css
@@ -232,7 +232,10 @@ nav { display: block;}
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
-  transition: opacity var(--transition-duration) var(--transition-timing-function);
+  transition: opacity var(--transition-duration)
+    var(--transition-timing-function),
+    visibility var(--transition-duration) 
+    var(--transition-timing-function);
 }
 .modal {
   position: absolute;
@@ -248,7 +251,7 @@ nav { display: block;}
   border-radius: 4px;
   transition: translate var(--transition-duration)
   var(--transition-timing-function), 
-  visibility var(--transition-duration) var(--transition-timing-function);
+ 
     
 }
 .hero-btn-close {
@@ -380,7 +383,7 @@ img {
   align-items: center;
   color: var(--background-color);
   font-weight: 700;
-  font-size: 14px;
+  font-size: 14;
   line-height: 1.14;
   text-align: center;
   letter-spacing: 0.03em;
