--- a/css/styles.css
+++ b/css/styles.css
@@ -383,7 +383,7 @@ img {
   align-items: center;
   color: var(--background-color);
   font-weight: 700;
-  font-size: 14;
+  font-size: 14px;
   line-height: 1.14;
   text-align: center;
   letter-spacing: 0.03em;
